<resources>
    <string name="app_name">NUMAD22Sp_YiZhang</string>
    <string name="about_me_string">About Me</string>
    <string name="clicky_clicky_string">Clicky Clicky</string>
    <string name="a_string">A</string>
    <string name="b_string">B</string>
    <string name="c_string">C</string>
    <string name="d_string">D</string>
    <string name="e_string">E</string>
    <string name="f_string">F</string>
    <string name="press_string">Press:</string>
    <string name="pressed_string">Pressed: -</string>
    <string name="me_string">Me</string>
    <string name="link_controller_string">Link Controller</string>
    <string name="add_string">add</string>
    <string name="locator_string">Locator</string>
    <string name="latitude_string">Latitude:</string>
    <string name="longitude_string">Longitude:</string>
    <string name="coordinates_string">Coordinates:</string>
    <string name="get_location_string">Get Location</string>
    <string name="web_service_string">Web Service</string>
    <string name="https_jsonplaceholder_typicode_com_posts_1_string">https://jsonplaceholder.typicode.com/posts/1</string>
    <string name="ping_web_service_string">Ping Web Service</string>
</resources>