<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hello World!" />

    <Button
        android:id="@+id/button"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/about_me_string" />

    <Button
        android:id="@+id/button2"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/clicky_clicky_string" />

    <Button
        android:id="@+id/buttonLinkController"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/link_controller_string" />

    <Button
        android:id="@+id/buttonLocator"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/locator_string"
        />

    <Button
        android:id="@+id/buttonWebService"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:text="@string/web_service_string" />


</LinearLayout>